# tcsc-gpulab

./: .gitignore  Kalman_filter_exercise.ipynb  Second_part.ipynb  exercises.ipynb  optional_exercise_kalman_filter.ipynb  readme.md  run-exclusive.sh  test.ipynb
device_properties/: device_properties.cu
hello_world/: hello_world.cu  (+1 more)
kalman_filter/: CMakeLists.txt  setup.py
kalman_filter/SoA/: CMakeLists.txt
kalman_filter/SoA/include/: definitions.cuh  impl_kalman_filter.cuh  utils.h
kalman_filter/SoA/src/: impl_kalman_filter.cu  kalman_filter.cu  utils.cu
kalman_filter/include/: helpers.h  load.h
kalman_filter/pinned_host_memory/: CMakeLists.txt
kalman_filter/pinned_host_memory/include/: impl_kalman_filter.cuh  utils.h
kalman_filter/pinned_host_memory/src/: kalman_filter.cu  utils.cu
kalman_filter/pinned_host_memory_solution/include/: impl_kalman_filter.cuh
kalman_filter/pinned_host_memory_solution/src/: impl_kalman_filter.cu  kalman_filter.cu
kalman_filter/src/: bindings.cpp  load.cpp  main.cpp
kalman_filter/start/: CMakeLists.txt
kalman_filter/start/include/: definitions.cuh  kalman_filter.h
kalman_filter/start/src/: impl_kalman_filter.cu  kalman_filter.cu
kalman_filter/start_solution/include/: run.h
kalman_filter/start_solution/src/: impl_kalman_filter.cu  kalman_filter.cu
kalman_filter/streams/: CMakeLists.txt
kalman_filter/streams/include/: impl_kalman_filter.cuh
kalman_filter/streams/src/: impl_kalman_filter.cu  kalman_filter.cu
kalman_filter/streams_solution/src/: impl_kalman_filter.cu  kalman_filter.cu
(+18 files in other folders)
